# sophia-agi

./: .cbmignore  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONSOLIDATION-REPORT.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOOD_FIRST_ISSUES.md  HANDOVER-GOVERNED-SPARSE-QUANT.md  HANDOVER.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  NOTICE.md  PR-governed-sparse-quant.md  README.md  RESULTS.md  SECURITY.md  SESSION-HANDOVER-2026-06-28.md  SESSION-HANDOVER-2026-06-29-agi-foundation.md  SESSION-HANDOVER-2026-06-29-bible-ethics.md  SESSION-HANDOVER-2026-06-29-cardinal-virtues.md  SESSION-HANDOVER-2026-06-29-code-scanning.md  SESSION-HANDOVER-2026-06-29-data-analysis-agent.md  SESSION-HANDOVER-2026-06-29-entity-sentinel-fix.md  SESSION-HANDOVER-2026-06-29-instinct-system.md  SESSION-HANDOVER-2026-06-29-multimodal-physical.md  SESSION-HANDOVER-2026-06-29-sag-okf-retrieval.md  SESSION-HANDOVER-2026-06-29-semantic-grounding.md  SESSION-HANDOVER-2026-06-29-thinking-logs.md  SESSION-HANDOVER-2026-06-29.md  (+26 more)
.claude/: README.md  settings.json
.cursor/: mcp.json  mcp.json.example
.githooks/: pre-commit
.github/: FUNDING.yml  PROJECT_AUTOMATION.md  dependabot.yml  issue-labeler.yml  labeler.yml  pull_request_template.md
agent/: __init__.py  a2a.py  a2a_distill.py  a2a_integrations.py  abstention_scoring.py  activation_probes.py  active_inference.py  active_query.py  adapter_registry.py  ai_search.py  andreia.py  ann_client.py  arkdistill.py  arkdistill_profiles.json  attribution_swap_verifier.py  audit_chain.py  auto_approval_breaker.py  auto_research.py  belief_revision_policy.py  belief_revision_scaling.py  belief_store.py  benchmark_checks.py  best_of.py  bio_verifier.py  biology_verifier.py  calibration.py  calibration_belief_store.py  canary.py  canon_promote.py  cantonese.py  chem_verifier.py  chemistry_verifier.py  chunking.py  citation_existence_verifier.py  claim_router.py  claimreview_retriever.py  closed_loop.py  cls_consolidation.py  code_verifier.py  coding_council.py  (+275 more)
agi-proof/: AGI-FOUNDATION-ROADMAP.md  PRE-REGISTRATION.md  README.md  REPLICATION.md  THEORY-ISSUES-FROM-LIVE-RUNS-2026-06-28.md  THEORY-ISSUES-RESOLUTION-2026-06-28.md  THEORY-REVIEW-2026-06-28.md  THEORY-REVIVAL-PLAN-2026-06-28.md  TODO.md  TRUSTWORTHINESS-CAPSTONE-2026-06-28.md  andreia-measurement-plan.md  architecture-bets.json  cardinal-virtues-temperance-justice-thesis.md  coding-integrity-thesis.md  consolidation-2026-06-25.md  courage-ledger.md  definition.md  dikaiosyne-measurement-plan.md  evidence-manifest.json  failure-ledger.md  failures.jsonl  gate-budget.json  gemma4-distillation-research-note.md  independence-eval-plan.md  justice-ledger.md  label-budget.json  leiden-compliance.json  long-context-bets.json  measurement-thesis.md  preregistered-thresholds.md  prosoche-attention-thesis.md  reasoning-core-design.md  research-note-source-discipline.md  sophia-wisdom-4b-method-note.md  sophrosyne-measurement-plan.md  temperance-ledger.md  tool-disclosure.json
benchmark/: agent_faithfulness.json  agent_faithfulness_heldout.json  code_tasks.json  faithfulness_cot_battery.json  faithfulness_cot_battery_v2.json  legal_citations.json  legal_citations_hk.json  legal_holding_faithful.json  legal_holding_faithful_hard.json  personality_faithful.json  responses.template.json
bridge/: HERMES-BRIEF.md  JUDGE_HOLD  PROTOCOL.md  STATUS.json  backlog.jsonl
cluster/: __init__.py  faults.py  job.py  netcalib.json  netcalib.py  observability.py  scheduler.py  simulator.py  topology.py
clustersim/: __init__.py  faults.py  netcalib.py  scheduler.py  simulator.py  topology.py
config/: cluster_baselines.json  cluster_inventory.example.json  cluster_inventory.json  consequence.json  devices.local.json  inference.local.example.json  inference.local.json  inference.local.judge-pool.json  inference.local.mac-judge-3family.json  inference.local.mac-judge.json  inference.local.spark.json  reward_surface.v1.json
configs/: sophia-code-rlvr.sample.json  sophia-experiment.sample.json  sophia-long-context-candidate.sample.json
constitution/: constitution.v1.json  constitution.v2.json
data/: andreia_courage_battery.json  attributions.json  behavioral_battery.json  behavioral_battery_heldout.json  capability_arithmetic.json  (+34 more)
services/ann_serving/: Cargo.toml  README.md  pyproject.toml
services/ann_serving/src/: lib.rs  main.rs  pack.rs  pool.rs  python.rs  serve.rs  sharded.rs
sophia-storage/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
sophia-storage/benches/: engine_bench.rs  kvcache_bench.rs
sophia-storage/crates/sophia-kvcache/: Cargo.toml  README.md
sophia-storage/crates/sophia-kvcache/src/: block.rs  eviction.rs  lib.rs  prefix.rs  store.rs  tier.rs
sophia-storage/crates/sophia-lsm/: Cargo.toml  README.md
sophia-storage/crates/sophia-lsm/src/: bloom.rs  compaction.rs  io.rs  levels.rs  lib.rs  memtable.rs  record.rs  sstable.rs  wal.rs
sophia-storage/crates/sophia-raft/: Cargo.toml
sophia-storage/crates/sophia-raft/src/: cluster.rs  lib.rs  log.rs  node.rs  state_machine.rs  types.rs
sophia-storage/docs/: DESIGN.md
storage/: Cargo.toml  README.md
storage/diskstore/: Cargo.toml
storage/diskstore/src/: crc.rs  engine.rs  lib.rs  reader.rs  record.rs
storage/diskstore/tests/: engine.rs
storage/infcache/: Cargo.toml
storage/infcache/src/: lib.rs  prefix.rs  tier.rs
storage/infcache/tests/: tiered.rs
storage/kvcache/: Cargo.toml
storage/kvcache/src/: cache.rs  client.rs  lib.rs  lru.rs  protocol.rs  server.rs
storage/kvcache/tests/: integration.rs
storage/miniraft/: Cargo.toml
storage/miniraft/src/: lib.rs  node.rs  sim.rs  types.rs
storage/miniraft/tests/: safety.rs
storage/raftkv/: Cargo.toml
storage/raftkv/src/: codec.rs  lib.rs
storage/raftkv/tests/: durable.rs
tools/sophia-lex/: Cargo.toml  README.md
tools/sophia-lex/fixtures/: overclaim_vectors.jsonl
tools/sophia-lex/src/: lib.rs  main.rs  normalize.rs  overclaim.rs  scl.rs  shingle.rs
(+4627 files in other folders)
