[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophia-agi"
version = "0.8.0"
description = "Verifier-gated training and proof package for provenance-aware AGI-candidate systems."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "tomyimkc" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
sophia = "sophia.cli:main"

# Optional dependencies are grouped to mirror the requirements-*.txt files, which
# document fail-closed optional backends (math/theorem verifiers abstain when their
# backend is absent — see requirements-math.txt / requirements-theorem.txt).
#
# `dev` exists so a contributor can produce a self-contained, correctly-versioned test
# environment with `uv sync --extra dev` (or `pip install -e ".[dev]"`). Without it, a
# fresh `uv sync` installs no test dependencies at all, and `uv run pytest` falls back to
# resolving `pytest` from elsewhere on the machine (often a different Python — observed:
# Python 3.9 when the project requires >=3.12), silently running the suite on the wrong
# interpreter and producing collection errors for `okf` / `agent`.
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "numpy>=1.26",   # hard-imported by agent.vector_store (vector index) and several RAG tests
  "sympy>=1.12",   # hard-imported by tools.generate_math_code_curriculum; optional for the math verifier
]

[tool.setuptools.packages.find]
include = ["agent*", "provenance_bench*", "sophia*", "sophia_mcp*"]
exclude = ["tests*"]
