# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 tomyimkc
#
# sophia-storage — an isolated, optional Rust workspace for the high-performance
# storage layer that sits *underneath* Sophia's Python trust layer. Nothing in the
# Python codebase depends on this; it is feature-gated and built separately.
#
# See docs/DESIGN.md for the why, and the per-crate docs for the how.

[workspace]
resolver = "3"
members = [
    "crates/sophia-lsm",
    "crates/sophia-kvcache",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["tomyimkc"]
repository = "https://github.com/tomyimkc/sophia-agi"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
