[package]
name = "sophia-ann-serving"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Dependency-free flat + NSW approximate-nearest-neighbour index for Sophia search recall"
repository = "https://github.com/tomyimkc/sophia-agi"

# Zero external dependencies by default: the core is self-contained, so `cargo test`/`build` need
# no network and stay reproducible. The ONLY optional dependency is PyO3, behind the `python`
# feature, for the in-process binding (`cargo build --features python`) — off by default.
[dependencies]
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }

[features]
# In-process Python binding (cdylib). Off by default so the default build stays dependency-free.
python = ["dep:pyo3"]

[lib]
name = "sophia_ann"
path = "src/lib.rs"
# rlib for the bins + tests; cdylib for the optional PyO3 extension module.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bench"
path = "src/main.rs"

# Streaming query server: builds (or loads) a sharded index, then answers queries from stdin.
# The Python bridge (agent/ann_client.py) drives it as a subprocess.
[[bin]]
name = "serve"
path = "src/serve.rs"

# Build a persisted sharded .idx once so `serve` loads it instantly instead of rebuilding.
[[bin]]
name = "pack"
path = "src/pack.rs"

[profile.release]
opt-level = 3
lto = true
