# Maturin packaging for the in-process PyO3 binding (the `python` cargo feature).
# Build/install the native extension with:
#   pip install maturin
#   maturin develop --release --features python   # dev install into the active venv
#   maturin build   --release --features python   # build a wheel
# Then:  >>> import sophia_ann
#
# This is OPTIONAL — the default search path uses the offline Python backend, and the
# subprocess bridge (agent/ann_client.py) needs no build step. The native module is the
# low-overhead, in-process option for operators who want it.
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sophia-ann"
version = "0.1.0"
description = "In-process sharded HNSW nearest-neighbour index (Rust core) for Sophia search"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
readme = "README.md"

[tool.maturin]
features = ["python"]
