# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 tomyimkc
#
# sophia-lex — a deterministic, single-DFA text scanner for the measurement gate.
#
# Built on `logos` (compile-time DFA lexer generation). This is an OPTIONAL
# accelerator for the pure-Python measurement-gate tools (tools/lint_claims.py,
# tools/assert_decontam.py). The Python tools remain the reference oracle; this
# crate must produce verdicts that AGREE with them on a shared test-vector suite
# and on the committed corpus (see tests/ + tools/test_lex_parity.py).
#
# It is DELIBERATELY its own workspace (empty [workspace] table below) so it is
# never pulled into the gating storage workspace (different build story, and the
# CI gates must stay pure-Python by default).

[package]
name = "sophia-lex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Deterministic single-DFA scanner for the Sophia measurement gate (overclaim, decontam shingles, claim language)."
publish = false

# Own workspace root — do not join the storage virtual workspace.
[workspace]

[[bin]]
name = "sophia-lex"
path = "src/main.rs"

[lib]
name = "sophia_lex"
path = "src/lib.rs"

[dependencies]
logos = "0.14"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
