# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 tomyimkc
[package]
name = "sophia-lsm"
description = "Log-structured local storage engine (WAL + memtable + SSTable + compaction) — the durable engine that replaces Sophia's JSONL stores."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "sophia_lsm"

[[bench]]
name = "engine_bench"
path = "../../benches/engine_bench.rs"
harness = false

[features]
default = []
# When enabled (Linux only), routes I/O through an io_uring backend. Off by
# default so the crate builds everywhere on the std backend. The uring backend
# is a documented seam (io.rs), not yet wired to the `io-uring` crate.
io_uring = []
